--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
-name: "Podcast Generator"
-author: "Ray Villalobos"
+name: "Podcast Generator Feb 2025"
+author: "Cindy Reichel"
 description: "Generates a feed for a podcast from a YAML file"
 runs:
   using: "docker"
